--- a/src/Sections/Info/Info.Module.scss
+++ b/src/Sections/Info/Info.Module.scss
@@ -73,7 +73,7 @@
     .description {
         font-size: 1.1rem;
         width: calc(100% - 14vw);
-        white-space: 1.4rem;
+        line-height: 1.4rem;
     }
 
     .infoList {
