--- a/src/components/LeaderboardHead/LeaderboardHead.module.scss
+++ b/src/components/LeaderboardHead/LeaderboardHead.module.scss
@@ -8,6 +8,7 @@
     line-height: 1.4vw;
     font-size: .9vw;
     color: #00000070;
+    white-space: nowrap;
 
     &:nth-child(1) {
         justify-self: center;
