--- a/src/components/TableHead/TableHead.module.scss
+++ b/src/components/TableHead/TableHead.module.scss
@@ -14,6 +14,7 @@
     line-height: 1.4vw;
     color: #B7BBBF;
     justify-self: center;
+    white-space: nowrap;
 }
 
 @media (max-width: 500px) {
