--- a/src/hoc/Layout/Layout.module.scss
+++ b/src/hoc/Layout/Layout.module.scss
@@ -106,6 +106,7 @@
     padding: .8vw 0;
     margin-right: 1vw;
     transition: .2s ease;
+    white-space: nowrap;
     &:hover {
         color: #5B7E78;
     }
